# ai-news-aggregator

./: .env.example  .gitignore  .renderignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  runner.py
app/agents/: __init__.py  digest_agent.py  email_agent.py  news_anchor_agent.py
app/database/: README.md  __init__.py  connection.py  models.py  repository.py
app/profiles/: __init__.py  user_profile.py
app/scrapers/: __init__.py  anthropic_news_scraper.py  openai_news_scraper.py
app/services/: smtp_service.py  transcript_fetcher.py  youtube_service.py
docker/: docker-compose.yml
docs/: DAILY_RUNNER.md  GMAIL_SMTP_SETUP.md  RENDER_DEPLOYMENT.md  RENDER_TROUBLESHOOTING.md
scripts/: check_digests.py  check_videos.py  create_tables.py  daily_runner.py  fetch_markdown_batch.py  fetch_transcripts_batch.py  generate_email.py  manage_channels.py  manage_profile.py  process_digests.py  rank_digests.py  recreate_tables.py  run_aggregator.py  send_email_digest.py  test_anthropic_markdown.py  test_anthropic_scraper.py  test_database.py  test_markdown_conversion.py  test_openai_dates.py  test_openai_news_scraper.py  test_openai_scraper_comprehensive.py  test_openai_scraper_mock.py  test_smtp.py  test_transcript.py  test_transcript_models.py  test_youtube_service.py
